Adding changes for staging reease